--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
+    "uuid": "^3.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
